--- a/flatform-frontend/src/styles/globals.css
+++ b/flatform-frontend/src/styles/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@import "./../components/layouts/admin/admin-layout.scss";
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
