--- a/flatform-frontend/styles/globals.css
+++ b/flatform-frontend/styles/globals.css
@@ -20,7 +20,15 @@
 }
 
 body {
-  background: var(--background);  
+  background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+  *,
+  ::before,
+  ::after {
+    border-color: theme("colors.gray.200");
+  }
 }
